# octHED

./: .gitignore  README.md  VGGInitializer.py  dataset_bsds500_uncert.py  datasets.py  exitation_block.py  exitationhed_model.py  fourier_convolution.py  fourierhed_model.py  hed.py  hed_model.py  main.py  octave_conv.py  octhed_model.py  predict.py  pyproject.toml  requirements.txt  script.sh  utils.py
datasets/: dataset_biped.py  dataset_bsds.py  dataset_bsds_uncert.py  dataset_factory.py
losses/: cross_entropy.py
models/: decoder.py  decoder_model.py  decoder_model_octave.py  decoder_octave.py  exitation_block.py  exitationhed_model.py  fourier_model.py  model_factory.py  octave_conv.py  octave_deconv.py  octave_model.py  octave_model_full.py  side_outputs_dense_model.py
