[project]
name = "hed"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.13, <3.15"
dependencies = [
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "numpy (>=2,<2.3.0)",
    "pillow (>=12.1.0,<13.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "ruff (>=0.14.13,<0.15.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "pyaml (>=25.7.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'W', 'PL', 'E']

[tool.ruff.format]
preview = true
quote-style = 'single'  
